--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,11 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+  background-color: #282c34;
+  min-height: 100vh;
+  padding-top: 30px;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -19,15 +14,45 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.gameBoard{
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
+  width: 800px;
+  height: 800px;
+  background-color: rgba(124, 124, 124, 0.25);
+  margin: 0 auto;
+  padding-bottom: 20px;
+  box-shadow: 0px 0px 3px 3px #bbb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.gameTitle{
+  margin-top: 50px;
+  font-family: 'Cinzel', serif;
+  font-size: 3.2em;
+  text-decoration: underline;
+  color: white;
+  box-shadow: 0px 0px 3px 3px #bbb;
+  text-shadow: 0px 0px 3px 3px #bbb;
 }
+
+.gameScreen{
+  width: 600px;
+  height: 500px;
+  margin: 50px auto;
+}
+
+.gameGrid{
+  display: grid;
+  /* grid-gap: 0em 0em; */
+  grid-template-columns:repeat(20, 30px);
+  grid-template-rows:repeat(20, 30px);
+  box-shadow: 0px 0px 3px 3px #bbb;
+}
+
+
+/* <div id="gameBoard" className="gameBoard">
+          <div id="gameScreen" className="gameScreen">
+            <div id="gameGrid" className="gameGrid"></div> */
+
